# controller-proxy

./: Cargo.toml  Dockerfile  kubernetes.yml  readme.md
.github/workflows/: docker.yml  self-hosted.yml
src/: controller_state.rs  main.rs  pass_through.rs
src/devices/: controller_state.rs  devices.rs  lib.rs  xbox_file.rs
